# metadata-extractor

./: .env.sample  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: batch_handler.py  dataset.py  evaluation.py  extractor.py  model.py
tests/: test_batch_handler.py  test_extractor.py  test_model.py
